# templates

./: .gitignore  CMakeLists.txt  README.md  fhc.cpp  fhc.cpp.md  fraction.cpp  fraction.cpp.md  index.md  multiple_cases.cpp  multiple_cases.cpp.md  point.cpp  point.cpp.md  random.cpp  random.cpp.md  random.hpp  random.hpp.md  rank_compression.cpp  rank_compression.cpp.md  rank_compression.hpp  rank_compression.hpp.md  template.cpp  template.cpp.md  template.hpp  template.hpp.md  test.cpp  test.cpp.md  timing.hpp  timing.hpp.md
.verify-helper/: .gitignore  timestamps.remote.json
ds/: bit.cpp  bit.hpp  bit.hpp.md  dsu.cpp  dsu.hpp  dsu.hpp.md  lazy_segment_tree.cpp  lazy_segment_tree.cpp.md  lazy_segment_tree.hpp  lazy_segment_tree.hpp.md  li_chao.cpp.md  li_chao_tree.hpp  li_chao_tree.hpp.md  segment_tree.cpp  segment_tree.cpp.md  segment_tree.hpp  segment_tree.hpp.md  segment_tree_lazy.hpp  segment_tree_lazy.hpp.md  sparse_table.cpp  sparse_table.cpp.md  sparse_table.hpp  sparse_table.hpp.md  treap.cpp  treap.cpp.md
graph/: 2sat.cpp  2sat.cpp.md  2sat.hpp  2sat.hpp.md  bcc.cpp  bcc.cpp.md  bfs.hpp  bfs.hpp.md  bfs_0_1.hpp  bfs_0_1.hpp.md  dijkstra.hpp  dijkstra.hpp.md  edge_types.hpp  edge_types.hpp.md  scc.cpp  scc.cpp.md  scc.hpp  scc.hpp.md  spfa.hpp  spfa.hpp.md  tarjan_undirected.hpp  tarjan_undirected.hpp.md
judge/: fhc.cpp  fhc.cpp.md  google.cpp  google.cpp.md  topcoder.cpp  topcoder.cpp.md  usaco.cpp  usaco.cpp.md
math/: _old_choose.cpp.md  _old_mod.cpp  _old_mod.cpp.md  catalan.hpp  catalan.hpp.md  choose.cpp  choose.cpp.md  choose.hpp  choose.hpp.md  choose_old.cpp.md  crt.hpp  crt.hpp.md  eea.hpp  eea.hpp.md  factor.hpp  factor.hpp.md  fast_modinv.cpp  fast_modinv.cpp.md  fast_modinv.hpp  fast_modinv.hpp.md  fastmod.cpp  fastmod.cpp.md  matrix.cpp  matrix.cpp.md  matrix.hpp  matrix.hpp.md  mod.cpp  mod.cpp.md  mod.hpp  mod.hpp.md  mod_old.cpp.md  old_choose.cpp  old_choose.cpp.md  old_mod.cpp.md  prime_factor.hpp  prime_factor.hpp.md  stirling.cpp  stirling.cpp.md  stirling.hpp  stirling.hpp.md  (+6 more)
old/: acc1p1brute.py  acc1p1brute.py.md  acc1p1gen.py  acc1p1gen.py.md  template_additons.cpp  template_additons.cpp.md  templateredux.cpp  templateredux.cpp.md  test.cpp  test.cpp.md
string/: _old_hash.cpp  _old_hash.cpp.md  _old_hash_utils.cpp  _old_hash_utils.cpp.md  hash.cpp.md  hash_utils.cpp  hash_utils.cpp.md  hash_utils.hpp  hash_utils.hpp.md  kmp.hpp  kmp.hpp.md  manachers.hpp  manachers.hpp.md  suffix_array.cpp  suffix_array.cpp.md  suffix_array.hpp  suffix_array.hpp.md  suffix_automaton.cpp  suffix_automaton.cpp.md  suffix_automaton.hpp  suffix_automaton.hpp.md  z_algorithm.hpp  z_algorithm.hpp.md
tests/: aplusb.test.cpp  aplusb.test.cpp.md  bit.test.cpp  bit.test.cpp.md  rank_compression.test.cpp  rank_compression.test.cpp.md  test_utils.hpp  test_utils.hpp.md
tests/ds/: bit.test.cpp  bit.test.cpp.md  dsu.test.cpp  dsu.test.cpp.md  li_chao_tree.test.cpp  li_chao_tree.test.cpp.md  segment_tree.test.cpp  segment_tree.test.cpp.md  segment_tree_lazy.test.cpp  segment_tree_lazy.test.cpp.md  sparse_table.test.cpp  sparse_table.test.cpp.md
tests/graph/: 2sat.test.cpp  2sat.test.cpp.md  articulation_points.test.cpp  articulation_points.test.cpp.md  bcc.test.cpp  bcc.test.cpp.md  bfs.test.cpp  bfs.test.cpp.md  biconnected_components.test.cpp.md  bridges.test.cpp  bridges.test.cpp.md  dijkstra.test.cpp  dijkstra.test.cpp.md  scc.test.cpp  scc.test.cpp.md  spfa.test.cpp  spfa.test.cpp.md
tests/math/: choose.test.cpp  choose.test.cpp.md  choose_non_prime_mod.test.cpp  choose_non_prime_mod.test.cpp.md  eea.test.cpp  eea.test.cpp.md  matrix_determinant.test.cpp  matrix_inverse.test.cpp  (+18 more)
tree/: hld.cpp  hld.cpp.md  hld.hpp  hld.hpp.md  lca.cpp  lca.cpp.md  lca_binary_lift.hpp  lca_binary_lift.hpp.md  lca_jump.hpp  lca_jump.hpp.md  lca_sparse_table.hpp  lca_sparse_table.hpp.md  lct.cpp  lct.cpp.md
(+22 files in other folders)
