cmake_minimum_required(VERSION 3.19)
project(templates)

set(CMAKE_CXX_STANDARD 17)

add_executable(templates
        ds/bit.hpp
        ds/dsu.hpp
        ds/segment_tree_lazy.hpp
        ds/li_chao_tree.hpp
        ds/segment_tree.hpp
        ds/sparse_table.hpp
        ds/treap.cpp
        external/E_fft.cpp
        external/E_reverse_it.cpp
        external/E_suffix_automaton.cpp
        external/extgcd.cpp
        external/fft.cpp
        external/flow.cpp
        external/mint.cpp
        external/UNFINISHED_ntt_big_mod.cpp
        graph/edge_types.hpp
        graph/2sat.hpp
        graph/tarjan_undirected.hpp
        graph/scc.hpp
        graph/bfs.hpp
        graph/bfs_0_1.hpp
        graph/dijkstra.hpp
        graph/spfa.hpp
        judge/fhc.cpp
        judge/google.cpp
        judge/topcoder.cpp
        judge/usaco.cpp
        math/choose.hpp
        math/old_choose.cpp
        math/fast_modinv.hpp
        external/fastmod.cpp
        math/matrix.cpp
        math/mod.hpp
        math/old_mod.cpp
        math/stirling1.hpp
        old/template_additons.cpp
        old/templateredux.cpp
        old/test.cpp
        string/hash.cpp
        string/hash_utils.cpp
        string/suffix_array.cpp
        string/suffix_automaton.cpp
        tree/hld.cpp
        tree/lca.cpp
        tree/lct.cpp
        fraction.cpp
        point.cpp
        multiple_cases.cpp
        random.cpp
        rank_compression.hpp
        template.cpp

        tests/ds/bit.test.cpp
        tests/ds/dsu.test.cpp
        tests/ds/li_chao_tree.test.cpp
        tests/ds/segment_tree.test.cpp
        tests/ds/segment_tree_lazy.test.cpp
        tests/ds/sparse_table.test.cpp

        tests/graph/2sat.test.cpp
        tests/graph/articulation_points.test.cpp
        tests/graph/biconnected_components.test.cpp
        tests/graph/bridges.test.cpp
        tests/graph/bfs.test.cpp
        tests/graph/dijkstra.test.cpp
        tests/graph/spfa.test.cpp

        tests/math/modint.test.cpp
        tests/math/choose.test.cpp
        tests/math/stirling2.test.cpp
        tests/math/prime_factor1.test.cpp
        tests/math/prime_factor2.test.cpp
        tests/math/totient.test.cpp
        tests/math/eea.test.cpp)
